...

    <string name="beta" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Beta</string>
    <string name="bookmark">Bookmark</string>

    <string name="cancel">Cancel</string>
    <string name="cancel_all">Cancel All</string>
    <string name="content">Content</string>
    <string name="copy">Copy</string>

    <string name="delete">Delete</string>
    <string name="define">Define</string>
    <string name="dev" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Development</string>
    <string name="display">Display</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="download_all">Download All</string>
    <string name="download_item">Download Item</string>

    <string name="edit_note">Edit Note</string>

...
    <string name="rename">Rename</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="screen_settings">Screen Settings</string>
    <string name="share">Share</string>
    <string name="skip">Skip</string>
    <string name="sort">Sort</string>
    <string name="staging" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Staging</string>
    <string name="template" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Template</string>

    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
...
    <string name="no_related_content">No Related Content</string>
    <string name="no_related_content_description2">No footnotes, personal notes, or other related content available.</string>
    <string name="no_tags" comment="The message to show when there are no tags">No Tags</string>
    <string name="no_tags_description">Create a tag to group content from anywhere in the app.</string>
    <string name="no_tagged_content" comment="The message to show when there are no tags">No Tagged Content</string>
    <string name="no_tagged_content_description">Attach a tag to any piece of content for future reference.</string>
    <string name="no_thanks">No Thanks</string>
    <string name="no_tips">No Tips</string>
    <string name="no_tips_description">Tips show you useful app functionality.</string>
    <string name="note_content">Note Content</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="notes">Notes</string>
...
