<?xml version="1.0" encoding="utf-8"?>
<org.lds.ldssa.ui.web.ContentWebView
    android:id="@+id/contentWebView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbarStyle="insideOverlay"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/leftHandleImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/ic_selection_handle_left"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/rightHandleImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="4dp"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/ic_selection_handle_right"
        android:visibility="invisible"/>

</org.lds.ldssa.ui.web.ContentWebView>