...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/directoryRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingTop="8dp"
                    android:scrollbars="vertical"/>

...
